# linscan

./: README.md  pyproject.toml
linscan/: __init__.py  _linscan.py
linscan/datasets/: __init__.py  _datasets.py
tests/: test_example_datasets.py
